Fixed vertical scrollbar showing on large screens

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -2,5 +2,4 @@
   background-color: var(--gray);
   height: 100vh;
   text-align: center;
-  padding: 20px 0;
 }
